# gig-fusion

./: .envrc  .gitignore  LICENSE  README.md  environment.yml
.github/: copilot-instructions.md
.github/workflows/: release.yml
data/raw/underdog/: concert_events_20250922_184039.json  concert_events_20250923_200213.json  concert_events_20250923_223038.json  concert_events_20250923_225031.json  concert_events_20250924_213801.json  concert_events_20250928_193420.json  concert_events_20250930_210019.json
docs/: architecture.md  developer.md
hack/ai-scraper/: api.http  debug.html  debug.txt  pyproject.toml
hack/ai-scraper/ai-scraper/: main.py
hack/underdog/: ingest.ipynb  parsing.ipynb
infra/: docker-compose.dev.yml  docker-compose.yml
infra/helm/: Chart.yaml  README.md  pod-pvc-test.yaml  pv.yaml  values.yaml
infra/helm/templates/: README.md  _helpers.tpl  cronjob.yaml  deployment.yaml  ingress.yaml  rbac.yaml  secret.yaml  service.yaml
notebook/: concert_events_20250919_005633.json  concert_events_20250919_005906.json  environment.yml
scripts/: README.md  ingest.sh  ingest_meilis.py  start-backend.sh  start-frontend.sh  start-parse.sh  start-reindex.sh
services/backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/backend/src/api/: main.py
services/backend/src/api/routes/: index.py  search.py
services/backend/src/api/services/: meili.py
services/common/: pyproject.toml
services/common/src/common/: __init__.py  config.py  consumer.py  models.py  producer.py
services/consumer/reindex/: pyproject.toml
services/consumer/reindex/src/: main.py
services/frontend/: .dockerignore  .env.production  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  env.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/frontend/src/: App.tsx  index.css
services/frontend/src/components/: AppliedFiltersBar.tsx  DarkModeToggle.tsx  FacetPanel.tsx  InfoTile.tsx  LeadingTile.tsx  Search.tsx  StatusTile.tsx
services/frontend/src/hooks/: useDarkMode.ts
services/producer/fixed-scraper/: mock_concert_events.json  pyproject.toml
services/producer/fixed-scraper/src/: main.py
services/scraper/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/scraper/scripts/: reindex.py  reindex.sh  run_reindex.py  run_scraper.py
services/scraper/src/scraper/: cleaner.py  fetcher.py  output.py  parser.py
services/scraper/src/scraper/parsers/: underdog.py
