[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = "FastAPI backend for gigfusion"
authors = ["Andreas Eri <andreas@eri.io>"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.13"

fastapi = { version = "^0.118.0", extras = ["all"] }
uvicorn = { version = "^0.37.0", extras = ["standard"] }
meilisearch = "^0.37.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
commit_parser = "angular"
changelog_file = "CHANGELOG.md"
tag_format = "{name}@{version}"
upload_to_pypi = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
