[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = "FastAPI backend for gigfusion"
authors = ["Andreas Eri <andreas@eri.io>"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.13"

fastapi = { version = "^0.118.0", extras = ["all"] }
uvicorn = { version = "^0.37.0", extras = ["standard"] }
meilisearch = "^0.37.0"

[tool.semantic_release]
commit_parser = "conventional-monorepo"
tag_format = "backend@{version}"
upload_to_pypi = false
upload_to_release = false
# version_toml = [
#   { file = "services/backend/pyproject.toml", section = "tool.poetry", key = "version" }
# ]
version_toml = ["pyproject.toml:tool.poetry,project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches."feat/github-actions"]
match = "feat/github-actions"
prerelease = true

# [tool.semantic_release.changelog]
# changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
path_filters = ["."]
scope_prefix = "backend-"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
