[tool.poetry]
name = "common"
version = "0.1.0"
description = "Shared logic for all producers and consumers"
authors = ["Andreas Eri <andreas@eri.io>"]
packages = [{ include = "common", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"

requests = "^2.32.5"
pydantic = "^2.12.0"
confluent-kafka = "^2.12.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"

[tool.poetry.extras]
full = ["confluent-kafka", "pydantic", "python-dotenv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
