[tool.poetry]
name = "gigfusion-scraper"
version = "0.1.0"
package-mode = false
description = "Scraper for gigfusion"
authors = ["Andreas Eri <andreas@eri.io>"]

[tool.poetry.dependencies]
python = "^3.13"

requests = "*"
beautifulsoup4 = "*"
python-dateutil = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
