[tool.poetry]
name = "scraper"
version = "0.1.0"
package-mode = false
description = "Date enrichment for gigfusion"
authors = ["Andreas Eri <andreas@eri.io>"]
packages = [{ include = "scraper" }]

[tool.poetry.dependencies]
python = "^3.13"

requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
python-dateutil = "^2.9.0.post0"
musicbrainzngs = "^0.7.1"
meilisearch = "^0.37.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
commit_parser = "angular"
changelog_file = "CHANGELOG.md"
tag_format = "{name}@{version}"
upload_to_pypi = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
